--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy==1.16.4
 scikit-image==0.15.0
 scikit-learn==0.20.2
 scipy==1.2.1
-tqdm==4.36.1
+tqdm>=4.36.1
 torchvision
 git+git://github.com/williamFalcon/test-tube.git@0.7.5#egg=test-tube
-git+git://github.com/PyTorchLightning/pytorch-lightning.git@0.7.1#egg=pytorch-lightning
+git+git://github.com/PyTorchLightning/pytorch-lightning.git@0.9.0#egg=pytorch-lightning
 
