--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-h5py==2.9.0
-numpy==1.16.4
-scikit-image==0.15.0
-scikit-learn==0.20.2
-scipy==1.2.1
+h5py>=2.9.0
+numpy>=1.16.4
+scikit-image>=0.15.0
+scikit-learn>=0.20.2
+scipy>=1.2.1
 tqdm>=4.36.1
 torchvision
 git+git://github.com/williamFalcon/test-tube.git@0.7.5#egg=test-tube
