--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ scikit-learn>=0.20.2
 scipy>=1.2.1
 tqdm>=4.36.1
 torchvision
-tensorboard==2.2.0
+tensorboard
+torch>=1.7.0
 git+git://github.com/williamFalcon/test-tube.git@0.7.5#egg=test-tube
-git+git://github.com/PyTorchLightning/pytorch-lightning.git@0.9.0#egg=pytorch-lightning
+git+git://github.com/PyTorchLightning/pytorch-lightning.git@1.0.6#egg=pytorch-lightning
 
